refact(global): Improvement of all the things
- Downsize navigation boxes
  + This improves mobile appearance for 320px displays
- Make skillset cooler
  + Change skill list angle
  + Adjust skill list margins to make the skills blast in from off screen
  + Rearrange skills
  + Increase font size
  + Increase padding around font
- Adjust headlines
  + h1, h2, h6
    * Change responsive sizes
    * Change responsive margins
    * Match fonts (Futura)
  + h2
    * Move up
    * Blend with previous section's background
- Begin work box tweaks
  + Adjust responsive vertical-horizontal dance
  + Make all work boxes the same size
  + Decrease the paragraph font size
  + Change hyperlink to aside, so a hyperlink icons can be used (WIP)

--- a/source/stylesheets/layout/_footer-root.scss
+++ b/source/stylesheets/layout/_footer-root.scss
@@ -1,19 +1,14 @@
 // _footer-root.scss
 
 ////= Footer/Root Styling
-//===========================================================================//
+//============================================================================//
 
 .root {
+  background: $primary-bg-color;
   font-size: $md-font-size;
-  padding: pxem(80px) 0;
-
-  @include respond-to('md') {
-    background-color: rgba($cloud-burst, 0.7);
-    padding: pxem(200px) 0 pxem(50px);
-  }
+  padding: pxem(65px) 0;
 
   small {
-    color: $secondary-color;
     float: none;
     margin: pxem(10px) 0 0;
   }
