--- a/source/stylesheets/layout/_main-principal.scss
+++ b/source/stylesheets/layout/_main-principal.scss
@@ -1,19 +1,8 @@
 // _main-principal.scss
 
 ////= Main/Principal Styling
-//===========================================================================//
+//============================================================================//
 
 .principal {
-  // background: $red;
-  // background: -webkit-linear-gradient(top left, $red 20%, $yellow 31.6666666667%, $green 43.3333333333%, $blue 55%, $red 55%, $green 100%);
-  // background: linear-gradient(to bottom right, $red 20%, $yellow 31.6666666667%, $green 43.3333333333%, $blue 55%, $red 55%, $green 100%);
-
-  // background: -webkit-linear-gradient(top left, #3366FF, #6633FF);
-  // background: linear-gradient(to bottom right, #3366FF, #6633FF);
-
-  // background: -webkit-linear-gradient(top left, #DEF5FF, #D7D0FF);
-  // background: linear-gradient(to bottom right, #DEF5FF, #D7D0FF);
-
-  // background: -webkit-linear-gradient(top left, $primary-bg-color, $secondary-bg-color);
-  // background: linear-gradient(to bottom right, $primary-bg-color, $secondary-bg-color);
+  //
 }
