--- a/source/stylesheets/modules/_work.scss
+++ b/source/stylesheets/modules/_work.scss
@@ -1,29 +1,33 @@
 // _work.scss
 
 ////= Work Module
-//===========================================================================//
+//============================================================================//
 
-.work {
-  padding: pxem(55px) pxem(30px);
+.work-list {
+  padding: pxem(55px) 0;
 
-  @include respond-to('sm') {
-    padding: pxem(55px) pxem(10px);
-  }
-
-  .app,
-  .proj {
+  .work {
     -moz-perspective: 1000;
     -o-perspective: 1000;
     -webkit-perspective: 1000;
     perspective: 1000;
+
+    &:focus div,
+    &:hover div {
+      -moz-transform: rotateY(180deg);
+      -o-transform: rotateY(180deg);
+      -webkit-transform: rotateY(180deg);
+      transform: rotateY(180deg);
+    }
   }
 
-  a {
+  aside {
     border: 1px solid rgba($black, 0.4);
     border-radius: $secondary-radius;
     color: $wild-sand;
     display: block;
-    padding: pxem(20px);
+    height: pxrem(215px);
+    width: pxrem(215px);
   }
 
   div {
@@ -38,40 +42,64 @@
   }
 
   h6 {
-    margin: 0 0 pxem(10px);
+    @extend .center-align;
+    margin: pxem(10px) 0;
   }
 
   li {
-    padding: pxem(30px) 0 0;
+    display: inline-block;
+    margin: pxem(10px) 30%;
+    vertical-align: middle;
 
     @include respond-to('sm') {
-      display: inline-block;
-      padding: pxem(10px);
-      vertical-align: middle;
-      width: pxem(260px);
+      margin: 0 pxem(8.5px);
+    }
+
+    @include respond-to('md') {
+      margin: 0 pxem(20px);
     }
   }
 
   p {
     line-height: 1.35;
+    padding: 0 pxem(20px) pxem(20px);
+    text-align: left;
   }
-}
 
-.project-list {
-  background-color: $secondary-bg-color;
+  .project {
+    [data-work="work-front"] {
+      background-image: -webkit-linear-gradient(top left, $fuchsia, $electric-violet);
+      background-image: linear-gradient(to bottom right, $fuchsia, $electric-violet);
+    }
 
-  .proj {
-    &:focus div,
-    &:hover div {
-      -moz-transform: rotateY(180deg);
-      -o-transform: rotateY(180deg);
-      -webkit-transform: rotateY(180deg);
-      transform: rotateY(180deg);
+    [data-work="work-back"] {
+      background-image: -webkit-linear-gradient(bottom left, $emerald, $lochmara);
+      background-image: linear-gradient(to top right, $emerald, $lochmara);
     }
   }
 
-  [data-work="project-front"],
-  [data-work="project-back"] {
+  .application {
+    [data-work="work-front"] {
+      background-image: -webkit-linear-gradient(top right, $fuchsia, $electric-violet);
+      background-image: linear-gradient(to bottom left, $fuchsia, $electric-violet);
+    }
+
+    [data-work="work-back"] {
+    }
+  }
+
+  .website {
+    [data-work="work-front"] {
+      background-image: -webkit-linear-gradient(bottom right, $electric-violet, $fuchsia);
+      background-image: linear-gradient(to top left, $electric-violet, $fuchsia);
+    }
+
+    [data-work="work-back"] {
+    }
+  }
+
+  [data-work="work-front"],
+  [data-work="work-back"] {
     -moz-backface-visibility: hidden;
     -o-backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
@@ -80,15 +108,11 @@
     top: 0;
   }
 
-  [data-work="project-front"] {
-    background-image: -webkit-linear-gradient(top left, $fuchsia, $electric-violet);
-    background-image: linear-gradient(to bottom right, $fuchsia, $electric-violet);
+  [data-work="work-front"] {
     z-index: 2;
   }
 
-  [data-work="project-back"] {
-    background-image: -webkit-linear-gradient(top right, $emerald, $lochmara);
-    background-image: linear-gradient(to bottom left, $emerald, $lochmara);
+  [data-work="work-back"] {
     position: absolute;
     -moz-transform: rotateY(180deg);
     -o-transform: rotateY(180deg);
@@ -97,58 +121,11 @@
   }
 }
 
-.application-list {
-  background-color: $primary-bg-color;
-
-  .app {
-    &:focus div,
-    &:hover div {
-      -moz-transform: translateZ(-100px) rotateX(180deg);
-      -o-transform: translateZ(-100px) rotateX(180deg);
-      -webkit-transform: translateZ(-100px) rotateX(180deg);
-      transform: translateZ(-100px) rotateX(180deg);
-    }
-  }
-
-  [data-work="application-front"],
-  [data-work="application-back"] {
-    -moz-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    left: 0;
-    top: 0;
-  }
-
-  [data-work="application-front"] {
-    background-image: -webkit-linear-gradient(top right, $fuchsia, $electric-violet);
-    background-image: linear-gradient(to bottom left, $fuchsia, $electric-violet);
-    z-index: 2;
-  }
-
-  [data-work="application-back"] {
-    background-image: -webkit-linear-gradient(top left, $emerald, $lochmara);
-    background-image: linear-gradient(to bottom right, $emerald, $lochmara);
-    position: absolute;
-    -moz-transform: translateZ(-100px) rotateX(180deg);
-    -o-transform: translateZ(-100px) rotateX(180deg);
-    -webkit-transform: translateZ(-100px) rotateX(180deg);
-    transform: translateZ(-100px) rotateX(180deg);
-  }
-}
-
+.project-list,
 .website-list {
   background-color: $secondary-bg-color;
+}
 
-  [data-work="website"] {
-    background-image: -webkit-linear-gradient(bottom right, $electric-violet, $fuchsia);
-    background-image: linear-gradient(to top left, $electric-violet, $fuchsia);
-    transition: box-shadow $primary-duration, transform $primary-duration;
-
-    &:focus,
-    &:hover {
-      box-shadow: pxem(-10px) pxem(-10px) 0 $fresh-eggplant;
-      transform: translate(10px, 10px);
-    }
-  }
+.application-list {
+  background-color: $primary-bg-color;
 }
