feat(work): Add B&W work-back images

--- a/source/stylesheets/modules/_work.scss
+++ b/source/stylesheets/modules/_work.scss
@@ -75,22 +75,34 @@
 
   .raptorframe {
     [data-work="work-back"] {
-      background-image: -webkit-linear-gradient(bottom left, $emerald, $lochmara);
-      background-image: linear-gradient(to top right, $emerald, $lochmara);
+      background: -webkit-linear-gradient(rgba($black, 0.45), rgba($black, 0.45)), url($path-work + '/RAPTORFrame-700x700.png') no-repeat;
+      background: linear-gradient(rgba($black, 0.45), rgba($black, 0.45)), url($path-work + '/RAPTORFrame-700x700.png') no-repeat;
+      -moz-background-size: 100% 100%;
+      -o-background-size: 100% 100%;
+      -webkit-background-size: 100% 100%;
+      background-size: 100% 100%;
     }
   }
 
   .businessmuumuu {
     [data-work="work-back"] {
-      background-image: -webkit-linear-gradient(bottom left, $emerald, $lochmara);
-      background-image: linear-gradient(to top right, $emerald, $lochmara);
+      background: -webkit-linear-gradient(rgba($black, 0.45), rgba($black, 0.45)), url($path-work + '/RAPTORFrame-700x700.png') no-repeat;
+      background: linear-gradient(rgba($black, 0.45), rgba($black, 0.45)), url($path-work + '/RAPTORFrame-700x700.png') no-repeat;
+      -moz-background-size: 100% 100%;
+      -o-background-size: 100% 100%;
+      -webkit-background-size: 100% 100%;
+      background-size: 100% 100%;
     }
   }
 
   .raptorsmacss {
     [data-work="work-back"] {
-      background-image: -webkit-linear-gradient(bottom left, $emerald, $lochmara);
-      background-image: linear-gradient(to top right, $emerald, $lochmara);
+      background: -webkit-linear-gradient(rgba($black, 0.45), rgba($black, 0.45)), url($path-work + '/RAPTORSMACSS-700x700.png') no-repeat;
+      background: linear-gradient(rgba($black, 0.45), rgba($black, 0.45)), url($path-work + '/RAPTORSMACSS-700x700.png') no-repeat;
+      -moz-background-size: 100% 100%;
+      -o-background-size: 100% 100%;
+      -webkit-background-size: 100% 100%;
+      background-size: 100% 100%;
     }
   }
 
@@ -103,15 +115,23 @@
 
   .kittyparty {
     [data-work="work-back"] {
-      background-image: -webkit-linear-gradient(bottom left, $emerald, $lochmara);
-      background-image: linear-gradient(to top right, $emerald, $lochmara);
+      background: -webkit-linear-gradient(rgba($black, 0.45), rgba($black, 0.45)), url($path-work + '/KittyParty-700x700.png') no-repeat;
+      background: linear-gradient(rgba($black, 0.45), rgba($black, 0.45)), url($path-work + '/KittyParty-700x700.png') no-repeat;
+      -moz-background-size: 100% 100%;
+      -o-background-size: 100% 100%;
+      -webkit-background-size: 100% 100%;
+      background-size: 100% 100%;
     }
   }
 
   .ourhouse {
     [data-work="work-back"] {
-      background-image: -webkit-linear-gradient(bottom left, $emerald, $lochmara);
-      background-image: linear-gradient(to top right, $emerald, $lochmara);
+      background: -webkit-linear-gradient(rgba($black, 0.45), rgba($black, 0.45)), url($path-work + '/OurHouse-700x700.png') no-repeat;
+      background: linear-gradient(rgba($black, 0.45), rgba($black, 0.45)), url($path-work + '/OurHouse-700x700.png') no-repeat;
+      -moz-background-size: 100% 100%;
+      -o-background-size: 100% 100%;
+      -webkit-background-size: 100% 100%;
+      background-size: 100% 100%;
     }
   }
 
@@ -124,15 +144,23 @@
 
   .suitandcape {
     [data-work="work-back"] {
-      background-image: -webkit-linear-gradient(bottom left, $emerald, $lochmara);
-      background-image: linear-gradient(to top right, $emerald, $lochmara);
+      background: -webkit-linear-gradient(rgba($black, 0.45), rgba($black, 0.45)), url($path-work + '/SuitAndCape-700x700.png') no-repeat;
+      background: linear-gradient(rgba($black, 0.45), rgba($black, 0.45)), url($path-work + '/SuitAndCape-700x700.png') no-repeat;
+      -moz-background-size: 100% 100%;
+      -o-background-size: 100% 100%;
+      -webkit-background-size: 100% 100%;
+      background-size: 100% 100%;
     }
   }
 
   .e-dapp {
     [data-work="work-back"] {
-      background-image: -webkit-linear-gradient(bottom left, $emerald, $lochmara);
-      background-image: linear-gradient(to top right, $emerald, $lochmara);
+      background: -webkit-linear-gradient(rgba($black, 0.45), rgba($black, 0.45)), url($path-work + '/e-dapp-500x500.png') no-repeat;
+      background: linear-gradient(rgba($black, 0.45), rgba($black, 0.45)), url($path-work + '/e-dapp-500x500.png') no-repeat;
+      -moz-background-size: 100% 100%;
+      -o-background-size: 100% 100%;
+      -webkit-background-size: 100% 100%;
+      background-size: 100% 100%;
     }
   }
 
