--- a/source/stylesheets/utilities/_config.scss
+++ b/source/stylesheets/utilities/_config.scss
@@ -11,6 +11,7 @@ $path-js: '../javascripts';
 $path-media: '../media';
 $path-avatar: $path-img + '/avatars';
 $path-wall: $path-img + '/wallpapers';
+$path-work: $path-img + '/work';
 
 //== Glyph Stack Assignments ==================================================/
 
